# qiansai_camera

./: CMakeLists.txt  README.md  lv_conf.h  lvgl_ui.cpp  lvgl_ui.h  main.cpp  photo.cpp  photo.h  recorder.cpp  recorder.h  serial_port.cpp  serial_port.h
.cache/clangd/index/: AnimatedGIF.h.F346BDED1F1C7AB8.idx  EVE_commands.c.865EC83A5A52C16C.idx  EVE_supplemental.c.21E4B0A66AA0143C.idx  audio_utils.c.541BBA94C52EA5BF.idx  audio_utils.h.BC5D695A1A9490BC.idx  chromatic.c.B8397F2D0A7EF6D5.idx  code128.c.0E2D02F08ADA12D6.idx  common.h.40900019BF3713E8.idx  decomp_raw.c.FD2CE847CE303B60.idx  drmrga.h.E63B47A0860481E9.idx  egl.c.7F7C31D24C69ADAD.idx  file_utils.c.2DBEA6A8F76AC921.idx  file_utils.h.24239715A5A85103.idx  font.h.C9D4A571C727A2C3.idx  frogfs.c.F5C63A3CC405673F.idx  frogfs.h.9D29100322E6D9C8.idx  frogfs_format.h.4600A65992175586.idx  frogfs_priv.h.360B2C355A1E42A8.idx  frogfs_types.h.A3AC7B724881D47E.idx  gif.c.77D38977FEF61D56.idx  gl.c.629372B462E8688D.idx  gles2.c.430D23EB8611E10E.idx  im2d.h.E69F8D953942E049.idx  im2d_buffer.h.2E62D94ECD0D727C.idx  im2d_common.h.EFDA13D13B8BB4D8.idx  im2d_mpi.h.894730E2C868698E.idx  im2d_single.h.BDFC2D014CEA36EF.idx  im2d_task.h.0D5CEE9A489E6DF9.idx  im2d_type.h.3125E6EDD2770F7C.idx  im2d_version.h.C7FE9C0972322623.idx  image_drawing.c.51330C467934E075.idx  image_drawing.h.6A8933DB65AD4070.idx  image_utils.c.B2594ACA05FB6B9B.idx  image_utils.h.3E5EF4DA9CE38D16.idx  lodepng.c.27633FA142B43F95.idx  lodepng.h.4B6459B94F208098.idx  lv_3dmath.c.8A4AF71574FA794F.idx  lv_3dmath.h.1108B4FA41E4478F.idx  lv_3dtexture.c.7C01FA215C4823DB.idx  lv_3dtexture.h.9E035FDB5AB17008.idx  (+935 more)
Docs/: 2.md
test_lvgl/: CMakeLists.txt  lv_conf.h  main.cpp
